--- a/PySpark/DataFrame/Case Study/Solution_DataFrame.ipynb
+++ b/PySpark/DataFrame/Case Study/Solution_DataFrame.ipynb
@@ -38,6 +38,44 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "454cbfa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data  = spark.read.options(delimiter=';',header=True,inferSchema=True).csv(\"bankmarketdata.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e77a4136",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+------------+-------+---------+-------+-------+-------+----+-------+---+-----+--------+--------+-----+--------+--------+---+\n",
+      "|age|         job|marital|education|default|balance|housing|loan|contact|day|month|duration|campaign|pdays|previous|poutcome|  y|\n",
+      "+---+------------+-------+---------+-------+-------+-------+----+-------+---+-----+--------+--------+-----+--------+--------+---+\n",
+      "| 58|  management|married| tertiary|     no|   2143|    yes|  no|unknown|  5|  may|     261|       1|   -1|       0| unknown| no|\n",
+      "| 44|  technician| single|secondary|     no|     29|    yes|  no|unknown|  5|  may|     151|       1|   -1|       0| unknown| no|\n",
+      "| 33|entrepreneur|married|secondary|     no|      2|    yes| yes|unknown|  5|  may|      76|       1|   -1|       0| unknown| no|\n",
+      "| 47| blue-collar|married|  unknown|     no|   1506|    yes|  no|unknown|  5|  may|      92|       1|   -1|       0| unknown| no|\n",
+      "| 33|     unknown| single|  unknown|     no|      1|     no|  no|unknown|  5|  may|     198|       1|   -1|       0| unknown| no|\n",
+      "+---+------------+-------+---------+-------+-------+-------+----+-------+---+-----+--------+--------+-----+--------+--------+---+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "107b50b9",
    "metadata": {},
    "outputs": [
@@ -75,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "f0d6665e",
    "metadata": {},
    "outputs": [
@@ -118,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e691bbb0",
    "metadata": {},
    "outputs": [],
@@ -128,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "1249c038",
    "metadata": {},
    "outputs": [
@@ -179,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "27ad4830",
    "metadata": {},
    "outputs": [
@@ -201,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "e699869e",
    "metadata": {},
    "outputs": [
@@ -216,6 +254,7 @@
    "source": [
     "#Using spark.sql\n",
     "df.createOrReplaceTempView(\"Banking\")\n",
+    "\n",
     "yes_count = spark.sql(\"SELECT COUNT(*) FROM Banking WHERE y = 'yes'\").collect()[0][0]\n",
     "total_count = spark.sql(\"SELECT COUNT(*) FROM Banking where y is not NUll\").collect()[0][0]\n",
     "success_rate = (yes_count / total_count) * 100\n",
@@ -232,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "bdc9d638",
    "metadata": {},
    "outputs": [
@@ -254,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "96074ee2",
    "metadata": {},
    "outputs": [
@@ -285,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "62f40013",
    "metadata": {},
    "outputs": [
@@ -308,6 +347,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "825216a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95 18 40.93621021432837\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using spark.sql\n",
+    "maximum_Age = spark.sql(\"select max(age) from Banking where y is not Null\").collect()[0][0]\n",
+    "mean_Age = spark.sql(\"select mean(age) from Banking where y is not Null\").collect()[0][0]\n",
+    "minimum_Age = spark.sql(\"select min(age) from Banking where y is not Null\").collect()[0][0]\n",
+    "print(maximum_Age, minimum_Age, mean_Age)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bada2259",
    "metadata": {},
@@ -317,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "5e7d9892",
    "metadata": {},
    "outputs": [
@@ -338,6 +399,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ba9d7352",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "448 1362.2720576850766\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using spark.sql\n",
+    "average_balance = spark.sql(\"select percentile_approx(balance,0.5) from Banking where y is not Null\").collect()[0][0]\n",
+    "median_balance = spark.sql(\"select mean(balance) from Banking where y is not Null\").collect()[0][0]\n",
+    "print(average_balance, median_balance)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "38c1928a",
    "metadata": {},
@@ -347,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "id": "2e5c27cc",
    "metadata": {},
    "outputs": [
@@ -389,6 +471,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6cb324ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row(count=1127, age_group='Youngsters')\n",
+      "Row(count=1385, age_group='Seniors')\n",
+      "Row(count=18, age_group='Teenagers')\n",
+      "Row(count=2759, age_group='MiddleAgers')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using spark.sql\n",
+    "result = spark.sql(\"SELECT count(*) as count, case when age < 13 then 'Kids' \\\n",
+    "\t\t   when (age >= 13) and (age <= 19) then 'Teenagers' \\\n",
+    "           when (age > 19) and (age <= 30) then 'Youngsters' \\\n",
+    "           when (age > 30) and (age < 50) then 'MiddleAgers' \\\n",
+    "           else 'Seniors' END as age_group \\\n",
+    "           FROM Banking where (y is not Null and y = 'yes')  \\\n",
+    "           group by (age_group)\").collect()\n",
+    "\n",
+    "for i in result:\n",
+    "    print(i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "1a318dba",
    "metadata": {},
@@ -398,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "79fb743c",
    "metadata": {},
    "outputs": [
@@ -422,6 +535,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "73f0b884",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row(count=622, marital='divorced')\n",
+      "Row(count=2755, marital='married')\n",
+      "Row(count=1912, marital='single')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using spark.sql\n",
+    "\n",
+    "result = spark.sql(\"SELECT count(*) as count, marital \\\n",
+    "           FROM Banking where (y is not Null and y = 'yes') \\\n",
+    "           group by (marital)\").collect()\n",
+    "\n",
+    "for i in result:\n",
+    "    print(i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "87e2bbb7",
    "metadata": {},
@@ -431,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "id": "f3ab2704",
    "metadata": {},
    "outputs": [
@@ -471,6 +611,52 @@
    "source": [
     "df.select('age','marital','y').where((df.y != '') & (df.y == 'yes')).groupby('age','marital').agg(count(col('y'))).orderBy('age').show(truncate =False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bb44c09a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row(count=18, marital='divorced', age_group='Youngsters')\n",
+      "Row(count=1532, marital='married', age_group='MiddleAgers')\n",
+      "Row(count=901, marital='single', age_group='MiddleAgers')\n",
+      "Row(count=182, marital='married', age_group='Youngsters')\n",
+      "Row(count=1041, marital='married', age_group='Seniors')\n",
+      "Row(count=326, marital='divorced', age_group='MiddleAgers')\n",
+      "Row(count=18, marital='single', age_group='Teenagers')\n",
+      "Row(count=278, marital='divorced', age_group='Seniors')\n",
+      "Row(count=927, marital='single', age_group='Youngsters')\n",
+      "Row(count=66, marital='single', age_group='Seniors')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using spark.sql\n",
+    "\n",
+    "result = spark.sql(\"SELECT count(*) as count, marital,  case when age < 13 then 'Kids' \\\n",
+    "\t\t   when (age >= 13) and (age <= 19) then 'Teenagers' \\\n",
+    "           when (age > 19) and (age <= 30) then 'Youngsters' \\\n",
+    "           when (age > 30) and (age < 50) then 'MiddleAgers' \\\n",
+    "           else 'Seniors' END as age_group \\\n",
+    "           FROM Banking where (y is not Null and y = 'yes') \\\n",
+    "           group by marital, age_group\").collect()\n",
+    "\n",
+    "for i in result:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e9f1f6c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
