--- a/PySpark/DataFrame/Case Study/Read_Write_formats.ipynb
+++ b/PySpark/DataFrame/Case Study/Read_Write_formats.ipynb
@@ -88,7 +88,9 @@
    "outputs": [],
    "source": [
     "# Reading Formats.\n",
+    "# Generic\n",
     "data  = spark.read.load(\"/mnt/c/Users/miles/Documents/futurense_hadoop-pyspark/labs/dataset/bankmarket/bankmarketdata.csv\",format = \"csv\", sep = \";\", de\n",
+    "# Normal Reading method\n",
     "df = spark.read.format('csv').load(\"/mnt/c/Users/miles/Documents/futurense_hadoop-pyspark/labs/dataset/bankmarket/bankmarketdata.csv\")\n",
     "limiter=';',header=True,inferSchema=True)\n",
     "# Writing Format Syntax.\n",
